// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Space /> correctly should apply margin to child component 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "marginBottom": 40,
            "marginLeft": 40,
            "marginRight": 40,
            "marginTop": 40,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`Renders <Space /> correctly should apply padding to child component 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`Renders <Space /> correctly should render child component with no spacings applied 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Array [
          Object {},
        ],
      ]
    }
    testID="space-view"
  />
</View>
`;
